--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PizzaHut.Domain\packages.config" />
   <repository path="..\PizzaHut\packages.config" />
   <repository path="..\PizzaHutWebApi\packages.config" />
 </repositories>
